Added source code link and css

--- a/index.html
+++ b/index.html
@@ -124,6 +124,12 @@
         </div>
       </div>
     </div>
+    <span id="coded-by">
+      <a href="https://github.com/rsm917/weather-app.git" target="blank">
+        Open-source code</a
+      >
+      by Rebecca Shuping</span
+    >
     <script src="src/index.js"></script>
   </body>
 </html>
