added images updated form html and css

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 <input
                   type="text"
                   id="city-input"
+                  autocomplete="off"
                   placeholder="Enter city name"
                 />
 
@@ -47,7 +48,10 @@
                   Search
                 </button>
                 <button id="current-location-button" input type="click">
-                  Use my location
+                  <img
+                    src="images/current-location.jpeg"
+                    id="current-location-img"
+                  />
                 </button>
               </form>
             </div>
