--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <div class="col" id="temp-div">
               <span id="current-temperature"></span
-                ><p id="temp-units">°F|°C</p>
+                ><p id="temp-units"><a href="#" id="fahrenheit-link" class="active">°F|</a><a href="#" id="celsius-link">°C</a></p>
                 <br/>
                 <span id="current-high"></span
                   ><span id="current-low"></span>
