added openweather icon element

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             </div>
             <div class="col" id="weather-icon">
                <img
-                    src="images/partly-cloudy.jpg"
-                    id="partly-cloudy-img"
+                    src="#"
+                    id="icon"
                   />
               <p id="weather-description"></p>
             </div>
