added JS for forecast

--- a/index.html
+++ b/index.html
@@ -68,18 +68,7 @@
             </div>
           </div>
 
-          <div class="weather-forecast">
-            <div class="row">
-              <div class="col-2">
-                <div class="weather-forecast-date">Monday</div>
-                weather-icon
-                <div class="weather-forecast-temps">
-                  <span class="forecast-temp-high">90°</span
-                  ><span class="forecast-temp-low">|86°</span>
-                </div>
-              </div>
-            </div>
-          </div>
+          <div class="weather-forecast" id="forecast"></div>
         </div>
       </div>
     </div>
