shortened days and month names css for coded by link

--- a/index.html
+++ b/index.html
@@ -74,7 +74,11 @@
     </div>
 
     <span id="coded-by">
-      <a href="https://github.com/rsm917/weather-app.git" target="_blank">
+      <a
+        href="https://github.com/rsm917/weather-app.git"
+        id="git-link"
+        target="_blank"
+      >
         Open-source code</a
       >
       by Rebecca Shuping</span
