removed weather description HTML and JS

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div id="weather-app">
           <div class="row">
             <div class="col">
-              <h1 id="location">Mobile</h1>
+              <h1 id="location"></h1>
               <h2 id="current-date"></h2>
               <ul id="weather-details">
                 <li>Humidity:<span id="humidity"></span>%</li>
@@ -43,8 +43,7 @@
               <span id="current-high"></span><span id="current-low"></span>
             </div>
             <div class="col" id="weather-icon">
-              <img src="#" id="icon" />
-              <p id="weather-description"></p>
+              <img src="" id="icon" />
             </div>
             <div class="col">
               <form class="change-city" id="change-city-form">
