fixed col size and adjusted color scheme

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="d-flex flex-wrap" id="weather-wrapper">
         <div id="weather-app">
           <div class="row">
-            <div class="col">
+            <div class="col-3">
               <h1 id="location"></h1>
               <h2 id="current-date"></h2>
               <ul id="weather-details">
@@ -33,7 +33,7 @@
                 <li>Wind:<span id="wind"></span> m/h</li>
               </ul>
             </div>
-            <div class="col" id="temp-div">
+            <div class="col-3" id="temp-div">
               <span id="current-temperature"></span>
               <p id="temp-units">
                 <a href="#" id="fahrenheit-link" class="active">°F|</a
@@ -42,10 +42,10 @@
               <br />
               <span id="current-high"></span><span id="current-low"></span>
             </div>
-            <div class="col" id="weather-icon">
+            <div class="col-3" id="weather-icon">
               <img src="" id="icon" />
             </div>
-            <div class="col">
+            <div class="col-3">
               <form class="change-city" id="change-city-form">
                 <input
                   type="text"
